syntax = "proto3";

// only relevant for protobuf namespace
package publicrpc.v1;

// only relevant for Go namespace
option go_package = "github.com/certusone/wormhole/bridge/pkg/proto/publicrpc/v1;publicrpcv1";

// public import will include the required types in the Go output
import public "gossip/v1/gossip.proto";

// Publicrpc service exposes endpoints to be consumed externally; GUIs, historical record keeping, etc.
service Publicrpc {
  // GetRawHeartbeats rpc endpoint returns a stream of the p2p heartbeat messages received.
  // The GetRawHeartbeats stream will include all messages received by the guardian,
  // without any filtering or verification of message content.
  rpc GetRawHeartbeats (GetRawHeartbeatsRequest) returns (stream gossip.v1.Heartbeat);
}

// GetRawHeartbeatsRequest is an empty request, sent as part of a request to start a stream.
message GetRawHeartbeatsRequest {
}
